--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     
-    <div class="container">
+    <div class="container" id="app">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
@@ -47,7 +47,8 @@
               </div>
             </div>
           </nav>
-
+        fhfhf
+        {{message}}
           <div id="background">
             <div id="result"></div>
              <div id="main">
@@ -89,6 +90,18 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script>
+        const app = Vue.createApp({
+            data() {
+                return {
+                    message: "Hello World!"
+                }
+            }
+        })
+
+        app.mount("#app")
+    </script>
     <script src="js/main.js"></script>
   </body>
 </html>
